Revise feedback form for BMSA restructuring
Updated the title and content of the feedback form to reflect the BMSA restructuring initiative. Enhanced the layout and styling for better user experience.

--- a/index.html
+++ b/index.html
@@ -3,46 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Form Submission</title>
+    <title>BMSA Restructuring Feedback Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-        .form-container {
-            box-shadow: 0 10px 25px -5px rgba(0, 0, 0, 0.1), 0 8px 10px -6px rgba(0, 0, 0, 0.1);
+        /* Custom scrollbar for a cleaner look */
+        ::-webkit-scrollbar {
+            width: 8px;
         }
-        /* Ensure the iframe scales nicely while maintaining user's requested height */
-        .responsive-iframe-container {
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-            padding-top: 56.25%; /* Default 16:9 ratio, but we'll override for the form */
+        ::-webkit-scrollbar-track {
+            background: #f1f1f1; 
         }
-        iframe {
-            border: none;
-            width: 100%;
-            height: 700px; /* Adjusted to ensure no scrollbars within the iframe */
+        ::-webkit-scrollbar-thumb {
+            background: #888; 
+            border-radius: 4px;
+        }
+        ::-webkit-scrollbar-thumb:hover {
+            background: #555; 
         }
     </style>
 </head>
-<body class="bg-gray-50 min-h-screen flex flex-col items-center py-8 px-4">
+<body class="bg-gray-50 min-h-screen flex flex-col items-center">
 
     <!-- Header Section -->
-    <header class="w-full max-w-2xl mb-8 text-center">
-        <h1 class="text-3xl font-bold text-gray-800 mb-2">Form Submission</h1>
-        <p class="text-gray-600">Please fill out the form below. Your feedback and data are important to us.</p>
+    <header class="w-full bg-white shadow-sm py-8 mb-6">
+        <div class="max-w-3xl mx-auto px-6">
+            <h1 class="text-3xl font-bold text-blue-900 text-center mb-6">BMSA Restructuring Feedback Form</h1>
+            
+            <div class="text-gray-700 space-y-4 leading-relaxed bg-blue-50 p-6 rounded-lg border border-blue-100">
+                <p class="font-medium">
+                    The Bundi Medical Students Association (BMSA) aims to strengthen leadership, teamwork, and collaboration among all medical students.
+                </p>
+                <ul class="list-disc pl-5 space-y-2">
+                    <li>We are currently in the process of restructuring BMSA to make it more effective, transparent, and inclusive.</li>
+                    <li>Your opinions and suggestions are extremely valuable in shaping the future structure of our organization.</li>
+                </ul>
+                <p>
+                    Please take a few minutes to share your honest feedback through this form.
+                </p>
+                <ul class="list-disc pl-5">
+                    <li>Your responses will help us build a stronger and more student-centered BMSA.</li>
+                </ul>
+            </div>
+        </div>
     </header>
 
-    <!-- Main Content: Form Container -->
-    <main class="w-full max-w-3xl bg-white rounded-xl overflow-hidden form-container transition-all duration-300 hover:shadow-2xl">
-        <div class="p-1 sm:p-4">
+    <!-- Form Container -->
+    <main class="w-full max-w-5xl px-0 sm:px-4 mb-10 flex-grow">
+        <div class="bg-white shadow-lg rounded-xl overflow-hidden border border-gray-100 relative">
+            
+            <!-- Loading Indicator -->
+            <div class="absolute inset-0 flex items-center justify-center bg-gray-50 -z-10">
+                <div class="animate-spin rounded-full h-12 w-12 border-b-2 border-blue-500"></div>
+            </div>
+
             <!-- The Google Form Iframe -->
+            <!-- We use w-full to make it responsive, overwriting the fixed 1080 width for mobile devices -->
             <iframe 
-                src="https://docs.google.com/forms/d/e/1FAIpQLSek2l-ZFRt58BqYHuNUgEZSGw3bthVirDncSet3j2DQJTtC4g/viewform?embedded=true" 
-                width="640" 
-                height="603" 
+                src="https://docs.google.com/forms/d/e/1FAIpQLSe-bRwIUYyIyPR4mG61KcVX4LVto9wXmQOHsdxAK1hRHUTEqg/viewform?embedded=true" 
+                class="w-full block"
+                height="2400" 
                 frameborder="0" 
                 marginheight="0" 
                 marginwidth="0"
-                class="rounded-lg w-full"
                 title="Google Form"
             >
                 Loading…
@@ -50,17 +72,10 @@
         </div>
     </main>
 
-    <!-- Footer Section -->
-    <footer class="mt-12 text-gray-400 text-sm text-center">
-        <p>&copy; 2024 Form Portal. All rights reserved.</p>
-        <p class="mt-1">Powered by Google Forms</p>
+    <!-- Simple Footer -->
+    <footer class="w-full py-6 text-center text-gray-400 text-sm">
+        <p>&copy; 2025 BMSA</p>
     </footer>
 
-    <script>
-        // Optional: Log when the page is ready
-        document.addEventListener('DOMContentLoaded', () => {
-            console.log("Form page loaded successfully.");
-        });
-    </script>
 </body>
 </html>
