--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@
     <!-- Simple Footer -->
     <footer class="w-full py-8 text-center text-gray-600 text-sm space-y-2 bg-white/20 backdrop-blur-md border-t border-white/30 relative z-10">
         <p class="font-semibold text-gray-800">&copy; 2025 Government Medical College, BUNDI. All Rights Reserved.</p>
-        <p>Designed & Developed by <span class="text-blue-800 font-bold">KANISHK</span>, Medical College, Bundi</p>
-        <p class="text-xs text-gray-500 font-medium uppercase tracking-wider pt-2">Government of Rajasthan</p>
+        <p>Designed & Developed by <span class="text-blue-800 font-bold">BMSA</span></p>
+        <p class="text-xs text-gray-500 font-medium uppercase tracking-wider pt-2">Government Medical College, Bundi</p>
     </footer>
 
 </body>
